# TrustTunnelRustClient

./: .gitignore  Cargo.toml  build-windows.sh
.github/workflows/: build-windows-x64.yml
gui/: Cargo.toml  tauri.conf.json
gui/src/: commands.rs  error.rs  ipc_client.rs  main.rs
installer/: Cargo.toml  build.rs
installer/src/: error.rs  files.rs  main.rs  service.rs  shortcut.rs
service/: Cargo.toml  build.rs
service/src/: error.rs  ffi.rs  ipc_server.rs  main.rs  vpn_manager.rs
shared/: Cargo.toml
shared/src/: lib.rs
ui/: package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  configEncoder.ts  index.css  store.ts  tauriApi.ts  types.ts
ui/src/components/: ServerForm.tsx  ServerList.tsx  VpnStatusBadge.tsx
