[workspace]
resolver = "2"
members = [
    "shared",
    "service",
    "gui",
    "installer",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["rskallies"]

[workspace.dependencies]
serde              = { version = "1",   features = ["derive"] }
serde_json         = "1"
tokio              = { version = "1",   features = ["full"] }
thiserror          = "2"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

windows-service = "0.7"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
] }

tauri       = { version = "2", features = ["tray-icon", "image-png"] }
tauri-build = { version = "2" }
