[package]
name    = "gui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "trusttunnel"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
shared             = { path = "../shared" }
serde              = { workspace = true }
serde_json         = { workspace = true }
tokio              = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
tauri              = { workspace = true }
