[package]
name    = "service"
version.workspace = true
edition.workspace = true

[[bin]]
name = "trusttunnel-service"
path = "src/main.rs"

[dependencies]
shared             = { path = "../shared" }
serde              = { workspace = true }
serde_json         = { workspace = true }
tokio              = { workspace = true }
thiserror          = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
windows-service    = "0.7"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
] }
